--- a/index.html
+++ b/index.html
@@ -775,84 +775,100 @@
     </section>
 
     <!-- Seção de Rodapé Início -->
-    <footer class="footer">
-        <div class="footer__top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4">
-                        <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-8">
-                        <div class="footer__newslatter">
-                            <form action="#">
-                                <!-- <input type="text" placeholder="Email">
-                                <button type="submit" class="site-btn">Subscrever</button> -->
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12">
-                        <div class="footer__social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                        </div>
+    <footer class="footer" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
+        <div class="container text-md-start ">
+            <!-- Grid row -->
+            <div class="row mt-3">
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 text-white">
+                    <!-- Content -->
+                    <div class="footer-logo mb-2"><img src="img/footer-logo1.png" alt=""></div>
+                    <p>
+                        Desejamos apoiar as famílias na jornada da maternidade e paternidade, cuidando de todos os
+                        elementos que as constituem
+                        física, psicológica e emocionalmente.
+                    </p>
+                    <div class="load__more">
+                        <a href="#" class="primary-btn">Fale conosco</a>
                     </div>
                 </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h4 class="text-uppercase fw-bold text-white mb-2">Consultas</h4>
+                    <p>
+                        <a href="#!" class="text-white">Amamentaçãoa</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Medicina</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Cirurgia</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Enfermagem</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Nutrição</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Pediatria</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Terapia ocupacional</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Testes diagnósticos
+                        </a>
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h4 class="text-uppercase fw-bold text-white mb-2">links úteis</h4>
+                    <p>
+                        <a href="#!" class="text-white">Galeria de fotos</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Pedido de informação</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Primeiros Socorros</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Vacinação </a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Workshop</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Apoio ao domicilio</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Cursos</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Trabalho humanitário</a>
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-white">
+                    <!-- Links -->
+                    <h4 class="text-uppercase fw-bold mb-2">Contact</h4>
+                    <p><i class="fa fa-clock-o mr-3"></i> Seg a Sex 8:00 às 18:00</p>
+                    <p><i class="fa fa-envelope mr-3"></i> geral@aclinica-mz.com</p>
+                    <p><i class="fa fa-phone mr-3"></i>+258 84 869 7194</p>
+                    <p><i class="fa fa-home mr-3"></i> Edifício ou Shopping 24, Avenida 24 de Julho.</p>
+                </div>
+                <!-- Grid column -->
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h5>A Clinica</h5>
-                        <ul>
-                            <li><a href="#">Sobre Nós</a></li>
-                            <li><a href="#">Equipa</a></li>
-                            <li><a href="#">O Nosso Trabalho Humanitário</a></li>
-                            <li><a href="#">Agenda</a></li>
-                            <li><a href="#">Cursos</a></li>
-
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h5>Links Rápidos</h5>
-                        <ul>
-                            <li><a href="#">Área Reservada</a></li>
-                            <li><a href="#">Consultas</a></li>
-                            <li><a href="#">Vacinaçao</a></li>
-                            <li><a href="#">Gravidez</a></li>
-                            <li><a href="#">Apoio ao domicílio</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="footer__address">
-                        <h5>Entre em Contato</h5>
-                        <ul>
-                            <li><i class="fa fa-map-marker"></i>Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
-                            </li>
-                            <li><i class="fa fa-phone"></i> +258 84 1869 7194</li>
-                            <li><i class="fa fa-envelope"></i> geral@aaclinica-mz.com</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-6">
-                    <div class="footer__map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3834.2284001393815!2d32.5737!3d-25.9692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ee81c160c60b5c5%3A0xab3b2266c8984b5f!2sMaputo%2C%20Mo%C3%A7ambique!5e0!3m2!1spt-BR!2s!4v1692288246392!5m2!1spt-BR!2s"
-                            width="100%" height="190" style="border:0" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </div>
-
-                </div>
-            </div>
-
+            <!-- Grid row -->
         </div>
         <div class="footer__copyright">
             <div class="container">
@@ -885,7 +901,7 @@
         document.addEventListener("DOMContentLoaded", function () {
             const timer = 4000; // Tempo entre transições
             let i = 0; // Índice inicial
-            const items = document.querySelectorAll('.servocos > li'); // Todos os itens
+            const items = document.querySelectorAll(' .servocos> li'); // Todos os itens
             const max = items.length; // Número total de itens
 
             // Função para exibir os 4 itens ativos com espaço entre eles
@@ -893,37 +909,31 @@
                 // Remove a classe 'active' de todos os itens
                 items.forEach((item, index) => {
                     item.classList.remove('active');
-                    item.style.transitionDelay = `${0}s`; // Reseta o atraso
+                    item.style.transitionDelay = `${0}s`;
+                    // Reseta o atraso
                 });
 
                 // Exibe os próximos 4 itens e adiciona delay nas transições
                 for (let j = 0; j < 4; j++) {
-                    const currentIndex = i + j;
-                    if (items[currentIndex]) {
-                        items[currentIndex].classList.add('active');
-                        items[currentIndex].style.transitionDelay = `${0.25 * (j + 1)}s`; // Adiciona o atraso gradual
+                    const currentIndex = i + j; if (items[currentIndex]) {
+                        items[currentIndex].classList.add('active'); items[currentIndex].style.transitionDelay = `${0.25 * (j + 1)}s`;
+                        // Adiciona o atraso gradual 
                     }
                 }
             }
-
-            // Exibe os primeiros itens ao carregar a página
+            // Exibe os primeiros itens ao carregar a página 
             showItems();
-
-            // Alterna os itens a cada intervalo
+            // Alterna os itens a cada intervalo 
             setInterval(function () {
                 // Atualiza o índice para o próximo conjunto de 4 itens
-                if (i < max - 4) {
-                    i += 4;
-                } else {
-                    i = 0; // Reinicia do início
+                if (i < max - 4) { i += 4; } else {
+                    i = 0;
+                    // Reinicia do início 
                 }
-
                 // Exibe os próximos 4 itens
                 showItems();
             }, timer);
-        });
-
-    </script>
+        }); </script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
