--- a/info.html
+++ b/info.html
@@ -179,6 +179,13 @@
             .then(data => {
                 document.getElementById('header-container').innerHTML = data; // O conteúdo é carregado como está
             });
+
+
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer').innerHTML = data; // O conteúdo é carregado como está
+            });
     </script>
 </head>
 
@@ -341,112 +348,13 @@
 
 
 
-
-
-
     <!-- Seção de Rodapé Início -->
-    <footer class="footer">
-        <div class="footer__top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4">
-                        <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-8">
-                        <div class="footer__newslatter">
-                            <form action="#">
-                                <!-- <input type="text" placeholder="Email">
-                                <button type="submit" class="site-btn">Subscrever</button> -->
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12">
-                        <div class="footer__social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h5>A Clinica</h5>
-                        <ul>
-                            <li><a href="#">Sobre Nós</a></li>
-                            <li><a href="#">Equipa</a></li>
-                            <li><a href="#">O Nosso Trabalho Humanitário</a></li>
-                            <li><a href="#">Agenda</a></li>
-                            <li><a href="#">Cursos</a></li>
+    <footer class="footer" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
+        <div id="footer">
 
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h5>Links Rápidos</h5>
-                        <ul>
-                            <li><a href="#">Área Reservada</a></li>
-                            <li><a href="#">Consultas</a></li>
-                            <li><a href="#">Vacinaçao</a></li>
-                            <li><a href="#">Gravidez</a></li>
-                            <li><a href="#">Apoio ao domicílio</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="footer__address">
-                        <h5>Entre em Contato</h5>
-                        <ul>
-                            <li><i class="fa fa-map-marker"></i>Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
-                            </li>
-                            <li><i class="fa fa-phone"></i> +258 84 1869 7194</li>
-                            <li><i class="fa fa-envelope"></i> geral@aaclinica-mz.com</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-6">
-                    <div class="footer__map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3834.2284001393815!2d32.5737!3d-25.9692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ee81c160c60b5c5%3A0xab3b2266c8984b5f!2sMaputo%2C%20Mo%C3%A7ambique!5e0!3m2!1spt-BR!2s!4v1692288246392!5m2!1spt-BR!2s"
-                            width="100%" height="190" style="border:0" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-        <div class="footer__copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="footer__copyright__text">
-                            <p>Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <ul>
-                            <li>Todos os Direitos Reservados</li>
-                            <li>Termos & Uso</li>
-                            <li>Política de Privacidade</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </footer>
     <!-- Seção de Rodapé Fim -->
-
 
 
     <!-- Js Plugins -->
