--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
             .then(data => {
                 document.getElementById('header-container').innerHTML = data; // O conteúdo é carregado como está
             });
+
+
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer').innerHTML = data; // O conteúdo é carregado como está
+            });
+
+
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer').innerHTML = data; // O conteúdo é carregado como está
+            });
     </script>
 </head>
 
@@ -186,8 +200,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
-                        <h2 class="mb-2">a SUA Jornada de Maternidade começa aqui</h2>
-                        <span>Da gravidez, ao apoio no pós-parto e ao crescimento do seu filhote!</span>
+                        <h2>a SUA Jornada de Maternidade começa aqui</h2>
+                        <span class="subtitle">Da gravidez, ao apoio no pós-parto e ao crescimento do seu
+                            filhote!</span>
                     </div>
                 </div>
             </div>
@@ -248,71 +263,64 @@
 
 
     <!-- Consultation Section Begin -->
-    <section class="consultation">
+    <section class="testimonials spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
-                    <div class=" p-0">
-                        <div class="consultation__video set-bg" data-setbg="img/gallery/gallery-4.jpg"
-                            style="background-image: url(&quot;img/gallery/gallery-4.jpg&quot;); height: 38rem;">
-                        </div>
+                <div class="col-lg-5">
+                    <div class="consultation__video set-bg" data-setbg="img/gallery/gallery-4.jpg"
+                        style="background-image: url(&quot;img/gallery/gallery-4.jpg&quot;); height: 30rem; width: 30rem; border-radius: 10px;">
                     </div>
                 </div>
 
-                <div class="col-lg-8">
-                    <div class="consultation__text p-0">
-                        <div class="row">
-                            <!-- Texto Principal -->
-                            <div class="col-lg-6 col-md-6">
-                                <div class="consultation__text__item">
-                                    <div class="section-title">
-                                        <h2>Conheça A <i>Clínica</i></h2>
-                                        <!-- <span>A Clínica conta com uma clínica especializada, equipada com uma equipa
+                <div class="col-lg-6">
+                    <div class="row">
+                        <!-- Texto Principal -->
+                        <div class="col-lg-12 col-md-6">
+                            <div class="section-title">
+                                <h2>Conheça A <i>Clínica</i></h2>
+                                <!-- <span>A Clínica conta com uma clínica especializada, equipada com uma equipa
                                             multidisciplinar.</span> -->
-                                    </div>
-                                    <p>
-                                        A Clínica é uma instituição
-                                        de saúde com o foco na família.
-                                        Desejamos
-                                        apoiar
-                                        as famílias na jornada da maternidade e
-                                        paternidade, cuidando de todos os elementos que as constituem
-                                        física,
-                                        psicológica e emocionalmente.</br><br>
-                                        N’A Clínica</i> vai
-                                        encontrar, entre outras, as especialidades de
-                                        Pediatria,
-                                        Nutrição, Vacinação e Terapia Ocupacional.</br><br>
-                                        Orgulhamo-nos de ser a única
-                                        instituição de saúde em Moçambique com uma
-                                        sala
-                                        multissensorial Snoezelen.</br><br>
-                                        A nossa equipa
-                                        multidisciplinar de excelência está ao seu dispor para
-                                        tornar
-                                        a sua experiência de maternidade e
-                                        paternidade o mais agradável possível.
-                                        Pais informados, são pais mais seguros e confiantes!
-                                        </br>
-                                    </p>
-                                </div>
-                                <div class="load__more">
-                                    <a href="#" class="primary-btn">Mais Informações</a>
-                                </div>
                             </div>
+                            <p class="text-justify">
+                                A Clínica é uma instituição
+                                de saúde com o foco na família.
+                                Desejamos
+                                apoiar
+                                as famílias na jornada da maternidade e
+                                paternidade, cuidando de todos os elementos que as constituem
+                                física,
+                                psicológica e emocionalmente.</br><br>
+                                N’A Clínica</i> vai
+                                encontrar, entre outras, as especialidades de
+                                Pediatria,
+                                Nutrição, Vacinação e Terapia Ocupacional.</br><br>
+                                Orgulhamo-nos de ser a única
+                                instituição de saúde em Moçambique com uma
+                                sala
+                                multissensorial Snoezelen.</br><br>
+                                A nossa equipa
+                                multidisciplinar de excelência está ao seu dispor para
+                                tornar
+                                a sua experiência de maternidade e
+                                paternidade o mais agradável possível.
+                                Pais informados, são pais mais seguros e confiantes!
+                                </br>
+                            </p>
+                        </div>
+                        <div class="load__more">
+                            <a href="about.html" class="primary-btn">Mais Informações</a>
+                        </div>
+                    </div>
 
-                            <!-- Vídeo ou Imagem Representativa -->
-                            <div class="col-lg-6 col-md-6 d-grid align-items-center">
+                    <!-- Vídeo ou Imagem Representativa -->
+                    <!-- <div class="col-lg-6 col-md-6 d-grid align-items-center">
                                 <div class="consultation__video set-bg" data-setbg="img/consultation-video.jpg">
                                     <a href="https://www.youtube.com/watch?v=PXsuI67s2AA" class="play-btn video-popup">
                                         <i class="fa fa-play"></i>
                                     </a>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
+                            </div> -->
                 </div>
-
             </div>
         </div>
     </section>
@@ -776,119 +784,8 @@
 
     <!-- Seção de Rodapé Início -->
     <footer class="footer" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
-        <div class="container text-md-start ">
-            <!-- Grid row -->
-            <div class="row mt-3">
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 text-white">
-                    <!-- Content -->
-                    <div class="footer-logo mb-2"><img src="img/footer-logo1.png" alt=""></div>
-                    <p>
-                        Desejamos apoiar as famílias na jornada da maternidade e paternidade, cuidando de todos os
-                        elementos que as constituem
-                        física, psicológica e emocionalmente.
-                    </p>
-                    <div class="load__more">
-                        <a href="#" class="primary-btn">Fale conosco</a>
-                    </div>
-                </div>
-                <!-- Grid column -->
+        <div id="footer">
 
-                <!-- Grid column -->
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <!-- Links -->
-                    <h4 class="text-uppercase fw-bold text-white mb-2">Consultas</h4>
-                    <p>
-                        <a href="#!" class="text-white">Amamentaçãoa</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Medicina</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Cirurgia</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Enfermagem</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Nutrição</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Pediatria</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Terapia ocupacional</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Testes diagnósticos
-                        </a>
-                    </p>
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <!-- Links -->
-                    <h4 class="text-uppercase fw-bold text-white mb-2">links úteis</h4>
-                    <p>
-                        <a href="#!" class="text-white">Galeria de fotos</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Pedido de informação</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Primeiros Socorros</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Vacinação </a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Workshop</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Apoio ao domicilio</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Cursos</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-white">Trabalho humanitário</a>
-                    </p>
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-white">
-                    <!-- Links -->
-                    <h4 class="text-uppercase fw-bold mb-2">Contact</h4>
-                    <p><i class="fa fa-clock-o mr-3"></i> Seg a Sex 8:00 às 18:00</p>
-                    <p><i class="fa fa-envelope mr-3"></i> geral@aclinica-mz.com</p>
-                    <p><i class="fa fa-phone mr-3"></i>+258 84 869 7194</p>
-                    <p><i class="fa fa-home mr-3"></i> Edifício ou Shopping 24, Avenida 24 de Julho.</p>
-                </div>
-                <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
-        </div>
-        <div class="footer__copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="footer__copyright__text">
-                            <p>Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <ul>
-                            <li>Todos os Direitos Reservados</li>
-                            <li>Termos & Uso</li>
-                            <li>Política de Privacidade</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </footer>
     <!-- Seção de Rodapé Fim -->
