--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -37,6 +37,13 @@
             .then(data => {
                 document.getElementById('header-container').innerHTML = data; // O conteúdo é carregado como está
             });
+
+
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer').innerHTML = data; // O conteúdo é carregado como está
+            });
     </script>
 </head>
 
