--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="consultation__text p-0">
                         <div class="row">
                             <!-- Banner 1 -->
-                            <div class="col banner-1" style="background-image: url('img/treinamento.jpg');">
+                            <div class="col banner-1" style="background-image: url('img/curso.webp');">
                                 <div class="banner-text subtitle">
                                     Curso de Preparação para o Parto e Parentalidade: pensado para si!
                                 </div>
