--- a/about.html
+++ b/about.html
@@ -78,9 +78,10 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    <a href="https://wa.me/+258123" class="float-whatsap" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-    </a>
+ <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+        <i class="fa fa-whatsapp" aria-hidden="true"></i>
+        <span>Fale Conosco!<span>
+      </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
@@ -138,7 +139,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 class="">A Clínica</h2>
+                                        <h2 class="">Somos a SUA aldeia</h2>
                                         <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                     </div>
                                 </div>
@@ -202,6 +203,7 @@
                         </div>
 
                         <h2 class="text-white mb-3">Destaque</h2>
+                    </div>
                         <span class="text-white" style="font-size: 19px;">A NOSSA VISÃO HOLÍSTICA da saúde abrange o seu
                             todo. Sabemos que a
                             saúde mental é tão ou mais importante que a saúde
@@ -218,7 +220,6 @@
                             credíveis em cada uma das suas
                             especialidades.
                         </span>
-                    </div>
                 </div>
             </div>
         </div>
@@ -281,11 +282,11 @@
                         </div>
 
                         <ul>
-                            <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
+                            <li><img src="img/icons/home 2.png" class="fa mr-3" width="20" height="20" alt=""> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
                                 ( R/C, corredor central ao lado do cabeleireiro)
                             </li>
-                            <li><i class="fa fa-phone"></i> +258 845 8548 54</li>
-                            <li><i class="fa fa-envelope"></i>geral@aclinica-mz.com</li>
+                            <li><img src="img/icons/contacto 2.png" class="fa mr-3" width="20" height="20" alt=""> +258 84 869 7194</li>
+                            <li><img src="img/icons/email 2.png" class="fa mr-3" width="20" height="20" alt=""> geral@aclinica-mz.com</li>
                         </ul>
 
                         <p>
