--- a/footer.html
+++ b/footer.html
@@ -7,12 +7,13 @@
                 <!-- Content -->
                 <div class="footer-logo mb-2"><img src="img/footer-logo1.png" alt=""></div>
                 <p>
-                    Desejamos apoiar as famílias na jornada da maternidade e paternidade, cuidando de todos os
+                    Desejamos apoiar as famílias na jornada da maternidade e paternidade, cuidando de todos
+                    os
                     elementos que as constituem
                     física, psicológica e emocionalmente.
                 </p>
                 <div class="load__more">
-                    <a href="#" class="primary-btn">Fale conosco</a>
+                    <a href="info.html" class="primary-btn">Fale conosco</a>
                 </div>
             </div>
             <!-- Grid column -->
@@ -22,25 +23,26 @@
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold text-white mb-2">Consultas</h4>
                 <p>
-                    <a href="#!" class="text-white">Amamentaçãoa</a>
+                    <a href="pages/amament-pre-parto.html" class="text-white">Amamentação</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Medicina</a>
+                    <a href="pages/cirurgia.html" class="text-white">Cirurgia</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Cirurgia</a>
+                    <a href="pages/enfermagem.html" class="text-white">Enfermagem</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Enfermagem</a>
+                    <a href="pages/viajante.html" class="text-white">Medicina</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Nutrição</a>
+                    <a href="pages/nutricao.html" class="text-white">Nutrição</a>
+                </p>
+
+                <p>
+                    <a href="pages/pediatria.html" class="text-white underline"><b>Pediatria</b></a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Pediatria</a>
-                </p>
-                <p>
-                    <a href="#!" class="text-white">Terapia ocupacional</a>
+                    <a href="pages/terapia.html" class="text-white">Terapia ocupacional</a>
                 </p>
                 <p>
                     <a href="#!" class="text-white">Testes diagnósticos
@@ -54,28 +56,30 @@
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold text-white mb-2">links úteis</h4>
                 <p>
-                    <a href="#!" class="text-white">Galeria de fotos</a>
-                </p>
-                <p>
-                    <a href="#!" class="text-white">Pedido de informação</a>
-                </p>
-                <p>
-                    <a href="#!" class="text-white">Primeiros Socorros</a>
-                </p>
-                <p>
-                    <a href="#!" class="text-white">Vacinação </a>
-                </p>
-                <p>
-                    <a href="#!" class="text-white">Workshop</a>
-                </p>
-                <p>
                     <a href="#!" class="text-white">Apoio ao domicilio</a>
                 </p>
                 <p>
                     <a href="#!" class="text-white">Cursos</a>
                 </p>
+
                 <p>
-                    <a href="#!" class="text-white">Trabalho humanitário</a>
+                    <a href="#!" class="text-white">Galeria de fotos</a>
+                </p>
+                <p>
+                    <a href="galeria.html" class="text-white">Pedido de informação</a>
+                </p>
+                <p>
+                    <a href="#!" class="text-white">Primeiros Socorros</a>
+                </p>
+                <p>
+                    <a href="humanitario.html" class="text-white">Trabalho humanitário</a>
+                </p>
+                <p>
+                    <a href="#!" class="text-white">Vacinação </a>
+                </p>
+
+                <p>
+                    <a href="#!" class="text-white">Workshop</a>
                 </p>
             </div>
             <!-- Grid column -->
@@ -84,10 +88,14 @@
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-white">
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold mb-2">Contact</h4>
-                <p><i class="fa fa-clock-o mr-3"></i> Seg a Sex 8:00 às 18:00</p>
-                <p><i class="fa fa-envelope mr-3"></i> geral@aclinica-mz.com</p>
-                <p><i class="fa fa-phone mr-3"></i>+258 84 869 7194</p>
-                <p><i class="fa fa-home mr-3"></i> Edifício ou Shopping 24, Avenida 24 de Julho.</p>
+                <p><img src="img/icons/horario.png" class="fa mr-3" width="20" height="20" alt=""> Seg a Sex
+                    8:00 às 18:00</p>
+                <p><img src="img/icons/email.png" class="fa mr-3" width="20" height="20" alt="">
+                    geral@aclinica-mz.com</p>
+                <p><img src="img/icons/contacto.png" class="fa mr-3" width="20" height="20" alt="">+258 84
+                    869 7194</p>
+                <p><img src="img/icons/home.png" class="fa mr-3" width="20" height="20" alt="">Edifício ou
+                    Shopping 24, Avenida 24 de Julho.</p>
             </div>
             <!-- Grid column -->
         </div>
