--- a/header.html
+++ b/header.html
@@ -3,10 +3,13 @@
         <div class="row">
             <div class="col-lg-8">
                 <ul class="header__top__left">
-                    <li><a href="#" class="text-white"><i class="fa fa-phone"></i> +258 84 869 7194</a></li>
-                    <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
+                    <li><a href="#" class="text-white"><img src="img/icons/contacto.png" class="fa mr-3" width="16"
+                                height="16" alt=""> +258 84 869 7194</a></li>
+                    <li><img src="img/icons/home.png" class="fa mr-3" width="16" height="16" alt=""> Edifício ou
+                        Shopping 24, Avenida 24 de Julho, Loja 20
                     </li>
-                    <li><i class="fa fa-clock-o"></i> Seg a Sex 8:00 às 18:00</li>
+                    <li><img src="img/icons/horario.png" class="fa mr-3" width="16" height="16" alt=""> Seg a Sex 8:00
+                        às 18:00</li>
                 </ul>
             </div>
             <div class="col-lg-4">
@@ -62,7 +65,7 @@
                                         <br>
                                         <span class="pt-4">Medicina do Viajante</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="viajante.html">Consulta</a></li>
+                                            <li><a href="pages/viajante.html">Consulta</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -112,6 +115,7 @@
                                             <li><a href="pages/terapia.html#B">Neurológica</a></li>
                                             <li><a href="pages/terapia.html#C">Saúde Mental</a></li>
                                             <li><a href="pages/terapia.html#D">Snoezelen</a></li>
+                                            <li><a href="pages/terapia.html#D">Snoezelen no Pós-Parto</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -156,7 +160,7 @@
                                     <li>
                                         <span>Preparação para a Amamentação</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Curso Normal em grupo</a></li>
+                                            <li><a href="#">Curso em grupo</a></li>
                                             <li><a href="#">Curso Individual</a></li>
                                             <li><a href="#">Preparation for Breastfeeding in English</a></li>
                                         </ul>
@@ -173,7 +177,7 @@
                                     <li>
                                         <span>Preparação para o parto</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Curso Normal em grupo</a></li>
+                                            <li><a href="#">Curso em grupo</a></li>
                                             <li><a href="#">Curso Individual</a></li>
                                             <li><a href="#">Pre-natal course in English</a></li>
                                         </ul>
@@ -194,7 +198,6 @@
                                 <li><a href="#">Amamentação</a></li>
                                 <li><a href="#">Enfermagem</a></li>
                                 <li><a href="#">Teste do pezinho</a></li>
-                                <li><a href="#">Pacotes</a></li>
                             </ul>
                         </li><!-- Serviços Adicionais -->
                         <li><a class="arrow" href="./additional-services.html">Workshops<span
@@ -211,9 +214,9 @@
                             </ul>
                         </li>
                         <a href="#" class="primary-btn" style="
-                                    right: 0;
-                                    position: absolute; margin-top: 0.4rem;
-                                "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                                right: 0;
+                                                position: absolute; margin-top: 0.4rem;
+                                            "> <i class="fa fa-lock"></i> Área Reservada</a>
                     </ul>
 
                 </nav>
