--- a/consultas.html
+++ b/consultas.html
@@ -86,9 +86,10 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    <a href="https://wa.me/+258123" class="float-whatsap" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-    </a>
+ <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+        <i class="fa fa-whatsapp" aria-hidden="true"></i>
+        <span>Fale Conosco!<span>
+      </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
