--- a/team.html
+++ b/team.html
@@ -71,6 +71,7 @@
             border-radius: 50%;
             color: beige;
         }
+    
     </style>
     <script>
         fetch('header.html')
@@ -93,9 +94,10 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    <a href="https://wa.me/+258123" class="float-whatsap" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-    </a>
+ <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+        <i class="fa fa-whatsapp" aria-hidden="true"></i>
+        <span>Fale Conosco!<span>
+      </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
@@ -195,7 +197,7 @@
                         <div class="row">
                             <div class="col-sm-6 col-md-4 col-lg-3 single-team">
                                 <div class="inner">
-                                    <a href="pages/team-sing.html">
+                                    <a href="pages/team-sing.html#A">
                                         <div class="team-img">
                                             <img src="img/team/team 4.jpg" alt="Member Photo">
                                         </div>
